--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/node_modules
-/dists
-/.tmp
-/.sass-cache
-/bower_components
+/frontend/node_modules
+/frontend/dists
+/frontend/.tmp
+/frontend/.sass-cache
+/frontend/bower_components
 .ideas
 .idea/*
 .idea/**/*
